<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Đọc báo RSS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="btn_back">Quay lại</string>
    <string name="btn_save">Lưu tin</string>
    <string name="btn_share">Chia sẻ</string>

    <string name="nav_content_title">Nội dung</string>
    <string name="nav_product_title">Sản phẩm</string>
    <string name="nav_saved_news_title">Tin đã lưu</string>
    <string name="nav_read_recently_title">Tin đã đọc</string>
    <string name="nav_review_app_title">Đánh giá ứng dụng</string>
    <string name="nav_send_email_title">Gửi email góp ý</string>

    <string name="toolbar_saved_news_title">Các tin đã lưu</string>
    <string name="toolbar_read_recently_title">Các tin đã đọc</string>

    <string name="menu_delete_all">Xóa tất cả</string>
    <string name="menu_search">Tìm kiếm</string>

    <string name="tv_no_internet">Không thể lấy dữ liệu.\nVui lòng kiểm tra lại kết nối mạng.</string>
    <string name="btn_retry">Thử lại</string>

    <string name="btn_text_agree">Đồng ý</string>
    <string name="btn_text_cancel">Hủy bỏ</string>

    <string name="tv_no_saved_news">Không có tin tức nào được lưu.</string>
    <string name="tv_no_read_news">Không có tin tức nào được đọc.</string>

    <string name="tv_not_found">Không tìm thấy kết quả.</string>
</resources>