<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_content_title">
        <menu>
            <item
                android:id="@+id/nav_saved"
                android:icon="@drawable/ic_menu_bookmark"
                android:title="@string/nav_saved_news_title" />

            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_menu_history"
                android:title="@string/nav_read_recently_title" />
        </menu>
    </item>

    <item android:title="@string/nav_product_title">
        <menu>
            <item
                android:id="@+id/nav_review_app"
                android:icon="@drawable/ic_menu_star_border_black"
                android:title="@string/nav_review_app_title" />

            <item
                android:id="@+id/nav_send_email"
                android:icon="@drawable/ic_menu_mail_outline_black"
                android:title="@string/nav_send_email_title" />
        </menu>
    </item>

</menu>